--- a/README
+++ b/README
@@ -1,14 +1,8 @@
-{\rtf1\ansi\ansicpg1252\cocoartf1038\cocoasubrtf350
-{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
-{\colortbl;\red255\green255\blue255;}
-\paperw11900\paperh16840\margl1440\margr1440\vieww9000\viewh8400\viewkind0
-\pard\tx566\tx1133\tx1700\tx2267\tx2834\tx3401\tx3968\tx4535\tx5102\tx5669\tx6236\tx6803\ql\qnatural\pardirnatural
+*Setting up Mr-Ray on your own server**
 
-\f0\fs24 \cf0 *Setting up Mr-Ray on your own server**\
-\
-Mr-Ray should work pretty much out the box you just need to do a little configuration.\
-\
-In config.py you will need to change the following variables:\
-*ROBOT_IDENT* This should be the appspot identifier for your application\
-*CONSUMER_KEY* This should be your oauth consumer key for wave\
-*CONSUMER_SECRET* This should be your oauth consumer secret for wave}
+Mr-Ray should work pretty much out the box you just need to do a little configuration.
+
+In config.py you will need to change the following variables:
+*ROBOT_IDENT* This should be the appspot identifier for your application
+*CONSUMER_KEY* This should be your oauth consumer key for wave
+*CONSUMER_SECRET* This should be your oauth consumer secret for wave
